--- a/src/components/header/header.scss
+++ b/src/components/header/header.scss
@@ -1,33 +1,25 @@
 header {
   display: block;
   width: 100%;
-  //margin: 0 auto;
-  //padding: 0 10px;
+  margin: 0 auto;
+  padding: 10px 5px 5px 5px;
   height: 75px;
   background: #121212;
+  //border: 12px rgb(226, 216, 216);
 
   .wrap {
-    position: relative;
-    display: block;
+    //position: relative;
     width: 100%;
     height: 100%;
-    margin: 0 auto;
-    max-width: 980px;
+    //margin: 0 auto;
 
     .logo {
-      display: block;
       width: 120px;
-      position: absolute;
-      left: 10px;
-      top: 50%;
-      -webkit-transform: translateY(-50%);
-      -moz-transform: translateY(-50%);
-      transform: translateY(-50%);
 
       img {
         display: block;
         width: 100%;
-        margin: 0;
+        //margin: 0;
       }
     }
   }
